fix variable pricing output spacing issue #232

--- a/style.css
+++ b/style.css
@@ -1907,6 +1907,7 @@ input[type="submit"].edd-submit {
 }
 .widget-area .edd_download_purchase_form .edd_price_options li {
 	padding: 8px 15px;
+	margin-bottom: 0;
 }
 .vendd-price-button-container .edd_download_purchase_form .edd_price_options li {
 	padding: 0 0 10px;
